@@ -290,11 +290,12 @@
       <plugin>
           <groupId>com.agilejava.docbkx</groupId>
           <artifactId>docbkx-maven-plugin</artifactId>
-          <version>2.0.10</version>
+          <version>2.0.11</version>
         <executions>
           <execution>
             <goals>
               <goal>generate-html</goal>
+              <goal>generate-pdf</goal>
             </goals>
             <phase>pre-site</phase>
           </execution>
