@@ -871,6 +871,7 @@ Release 0.21.0 - Unreleased
    HBASE-2405  Close, split, open of regions in RegionServer are run by a single
                thread only.
    HBASE-1676  load balancing on a large cluster doesn't work very well
+   HBASE-2953  Edit of hbase-default.xml removing stale configs.
 
   NEW FEATURES
    HBASE-1961  HBase EC2 scripts
